latest update, adding more fastq files and test to remove

--- a/exercises/Getting_Started_in_R.html
+++ b/exercises/Getting_Started_in_R.html
@@ -471,9 +471,7 @@ glimpse(DE_results_heatshock_annotated)</code></pre>
 ## $ Object.Type           &lt;chr&gt; &quot;protein&quot;, &quot;protein&quot;, &quot;protein&quot;, &quot;protein&quot;, &quot;pro…
 ## $ Taxon                 &lt;chr&gt; &quot;taxon:559292&quot;, &quot;taxon:559292&quot;, &quot;taxon:559292&quot;, …
 ## $ GO.ID                 &lt;chr&gt; &quot;GO:0000127|GO:0000127|GO:0000127|GO:0000127|GO:…</code></pre>
-<p>We see in the output there are
-<code>nrow(DE_results_heatshock_annotated)</code> rows and
-<code>ncol(DE_results_heatshock_annotated)</code> columns in the data.
+<p>We see in the output there are 6000 rows and 18 columns in the data.
 The same information should be available in the environment panel of
 RStudio</p>
 </div>
