--- a/second_test_rfastp_pe.html
+++ b/second_test_rfastp_pe.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="content-type" content="text/html;charset=utf-8" /><title>fastp report at 2023-07-20      16:02:28 </title><script src='http://opengene.org/plotly-1.2.0.min.js'></script>
+<html><head><meta http-equiv="content-type" content="text/html;charset=utf-8" /><title>fastp report at 2023-07-21      12:35:14 </title><script src='http://opengene.org/plotly-1.2.0.min.js'></script>
 
 <script type="text/javascript">
     function showOrHide(divname) {
@@ -46,7 +46,7 @@ a:visited {color: #999999}
 <tr><td class='col1'>mean length before filtering:</td><td class='col2'>100bp, 100bp</td></tr>
 <tr><td class='col1'>mean length after filtering:</td><td class='col2'>99bp, 100bp</td></tr>
 <tr><td class='col1'>duplication rate:</td><td class='col2'>0.000000%</td></tr>
-<tr><td class='col1'>Insert size peak:</td><td class='col2'>100</td></tr>
+<tr><td class='col1'>Insert size peak:</td><td class='col2'>0</td></tr>
 </table>
 </div>
 <div class='subsection_title' onclick=showOrHide('before_filtering_summary')>Before filtering</div>
@@ -119,12 +119,12 @@ Plotly.newPlot('plot_duplication', data, layout);
 <div id='insert_size_figure'>
 <div class='figure' id='plot_insert_size' style='height:400px;'></div>
 </div>
-<div class='sub_section_tips'>This estimation is based on paired-end overlap analysis, and there are 99.900000% reads found not overlapped. <br /> The nonoverlapped read pairs may have insert size &lt;30 or &gt;170, or contain too much sequencing errors to be detected as overlapped.</div>
+<div class='sub_section_tips'>This estimation is based on paired-end overlap analysis, and there are nan% reads found not overlapped. <br /> The nonoverlapped read pairs may have insert size &lt;30 or &gt;170, or contain too much sequencing errors to be detected as overlapped.</div>
 
 <script type="text/javascript">
-var data=[{x:[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169],y:[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0.1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],name: 'Percent (%)  ',type:'bar',line:{color:'rgba(128,0,128,1.0)', width:1}
+var data=[{x:[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169],y:[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],name: 'Percent (%)  ',type:'bar',line:{color:'rgba(128,0,128,1.0)', width:1}
 }];
-var layout={title:'Insert size distribution (99.900000% reads are with unknown length)', xaxis:{title:'Insert size'}, yaxis:{title:'Read percent (%)'}};
+var layout={title:'Insert size distribution (nan% reads are with unknown length)', xaxis:{title:'Insert size'}, yaxis:{title:'Read percent (%)'}};
 Plotly.newPlot('plot_insert_size', data, layout);
 </script>
 </div>
@@ -4653,4 +4653,4 @@ Plotly.newPlot('plot_After_filtering__read2__base_contents', data, layout);
 </div>
 
 </div>
-<div id='footer'> <p>testcommand</p>fastp 0.21.0, at 2023-07-20      16:02:28 </div></body></html>
+<div id='footer'> <p>testcommand</p>fastp 0.21.0, at 2023-07-21      12:35:14 </div></body></html>
