okay actually finished with this one now

--- a/exercises/Getting_Started_in_R.html
+++ b/exercises/Getting_Started_in_R.html
@@ -388,7 +388,7 @@ the R ecosystem to analyze genomic data</p>
 </div>
 <div id="learning-outcomes" class="section level1">
 <h1>Learning outcomes</h1>
-<p>At the end of this excercise, you should be able to:</p>
+<p>At the end of this exercise, you should be able to:</p>
 <ul>
 <li>open, modify, and knit an Rmd file to a pdf/html output</li>
 <li>relate Rmarkdown to a traditional lab notebook</li>
@@ -518,20 +518,21 @@ dataset.</p>
 <h2>Exploring the data</h2>
 <p>This dataset includes the log fold changes of gene expression in an
 experiment testing the ethanol stress response for the YPS606 strain of
-<em>S. cerevisiae</em> and an msn2/4ΔΔ mutant. There are also additional
-columns of metadata about each gene. In later classes, we will cover the
-details included, but we can already start answering questions.</p>
+<em>S. cerevisiae</em> and an <em>msn2/4ΔΔ</em> mutant. There are also
+additional columns of metadata about each gene. In later classes, we
+will cover the details included, but we can already start answering
+questions.</p>
 <p><strong>Using RStudio, answer the following questions:</strong></p>
 <ol style="list-style-type: decimal">
 <li><p>How many genes are included in this study?</p></li>
-<li><p>Which gene has the highest log fold change in the msn2/4ΔΔ mutant
-EtOH response?</p></li>
+<li><p>Which gene has the highest log fold change in the
+<em>msn2/4ΔΔ</em> mutant EtOH response?</p></li>
 <li><p>How many HSP genes are differentially expressed (FDR &lt; 0.01)
 in unstressed conditions for the mutant?</p></li>
 <li><p>Do the genes with the largest magnitude fold changes have the
 smallest p-values?</p></li>
 <li><p>Which isoform of phosphoglucomutase is upregulated in response to
-ethanol stress? Do you think msn2/4 is responsible for this
+ethanol stress? Do you think <em>msn2/4</em> is responsible for this
 difference?</p></li>
 </ol>
 <p>Be sure to knit this file into a pdf or html file once you’re
