--- a/exercises/12_motif_analysis.html
+++ b/exercises/12_motif_analysis.html
@@ -444,7 +444,7 @@ display: none;
 </div>
 
 
-<p>last updated: 2023-10-23</p>
+<p>last updated: 2023-10-25</p>
 <div id="description" class="section level3">
 <h3>Description</h3>
 <p>In this class exercise, we will explore the use of the MEME suite for
@@ -536,7 +536,8 @@ check_meme_install()</code></pre>
 <p>If install didn’t work, troubleshooting is needed.</p>
 </div>
 <div id="analysis-motif-discovery-for-msn24-vs-wt-response-to-etoh" class="section level1">
-<h1>Analysis: Motif Discovery for Msn2/4∆∆ vs WT Response to EtOH</h1>
+<h1>Analysis: Motif Discovery for <em>msn2/4</em>∆∆ vs WT Response to
+EtOH</h1>
 <div id="retrieve-logfc-and-fdr-values" class="section level2">
 <h2>Retrieve LogFC and FDR values</h2>
 <p>Let’s load in the <code>DE_yeast_TF_stress.txt</code> file containing
@@ -648,9 +649,9 @@ the gene list down just to the genes in your gene list.</p>
 <p>In order to continue, we need a list of genes.</p>
 <p>What gene list do you think has the most interesting biological
 meaning for motif analysis? One comparison to consider is the genes that
-are most different in the EtOH response between WT and Msn2/4∆∆ samples.
-Let’s get that list of genes with large magnitude and statistically
-significant negative logFC values now:</p>
+are most different in the EtOH response between WT and <em>msn2/4</em>∆∆
+samples. Let’s get that list of genes with large magnitude and
+statistically significant negative logFC values now:</p>
 <pre class="r"><code># Create gene list for downregulated genes
 msn24_EtOH_down &lt;- FC_list |&gt;
   dplyr::filter(logFC..WT.v.msn24.mutant..EtOH.response &lt; -2) |&gt;
@@ -672,20 +673,32 @@ file. Here is how we can do that:</p>
 msn24_EtOH_down_fa &lt;- Biostrings::DNAStringSet(msn24_EtOH_down$coding_gene_flank)
 # Add gene names
 names(msn24_EtOH_down_fa) &lt;- msn24_EtOH_down$ID</code></pre>
+<p>Let’s create a folder to which we can save output files.</p>
+<pre class="r"><code># Choose output directory for the output files to be saved
+out_dir &lt;- path.expand(&quot;~/Desktop/Genomic_Data_Analysis/Analysis/memes/&quot;)
+
+# Create out_dir directory if doesn&#39;t already exist
+if (!dir.exists(out_dir)) {
+  dir.create(out_dir, recursive = TRUE)
+}</code></pre>
 <div id="run-meme-enrichment" class="section level2">
 <h2>Run Meme enrichment</h2>
 <p>This was the first algorithm developed in the MEME-suite, and is
-still widely used. However, it is not always the best approach. Unlike
-many bioinformatic software, the default parameter settings are usually
-<strong>not</strong> the best options for motif analysis. We can adjust
-these settings in class to parameters better suited to our data (based
-on biological domain knowledge). See all of the parameter options at: <a href="https://meme-suite.org/meme/doc/meme.html" class="uri">https://meme-suite.org/meme/doc/meme.html</a></p>
+still widely used. However, it is not always the best approach. MEME is
+recommended when you have fewer than 50 sequences, while STREME is
+recommended when you have more. Also, the default parameter settings are
+often <strong>not</strong> the best options depending on your organism
+(e.g, bacteria tend to have longer motifs). We can adjust these settings
+in class to parameters better suited to our data (based on biological
+domain knowledge). See all of the parameter options at: <a href="https://meme-suite.org/meme/doc/meme.html" class="uri">https://meme-suite.org/meme/doc/meme.html</a></p>
 <pre class="r"><code># Run Meme
 meme_msn24_EtOH_down &lt;- runMeme(msn24_EtOH_down_fa, 
-        minw = 8, # default is 8
-        maxw= 50, #default is 50
+        minw = 8, # default is 8, for yeast I use 5
+        maxw= 50, #default is 50, for yeast I use 20
+        mod= &quot;zoops&quot;, #zero or one occurence per sequence
         parse_genomic_coord=FALSE,
-        silent=F
+        silent=F,
+        outdir = path.expand(paste0(out_dir, &quot;meme_msn24_EtOH_down&quot;))
         )</code></pre>
 <pre><code>## </code></pre>
 <pre class="r"><code># Display Meme results
@@ -699,10 +712,10 @@ meme_msn24_EtOH_down</code></pre>
 ## 
 ## [Hidden empty columns: family, organism, bkgsites, pval, qval.]</code></pre>
 </div>
-<div id="run-streme-enrichment" class="section level2">
-<h2>Run Streme enrichment</h2>
-<p>A newer alternative function, part of the MEME suite, that is better
-suited to looking for shorter motifs which are common in Eukaryotes.</p>
+<div id="run-steme-enrichment" class="section level2">
+<h2>Run STEME enrichment</h2>
+<p>STEME is a newer MEME suite tool, that is better suited to looking
+for shorter motifs which are common in Eukaryotes.</p>
 <p>For <code>runStreme</code>, properly setting the <code>control</code>
 parameter is key to discovering biologically relevant motifs. Often,
 using <code>control = &quot;shuffle&quot;</code> will produce a suboptimal set of
@@ -711,7 +724,7 @@ motifs; however, some discriminative analysis designs don’t have proper
 <p>For our analysis, we can use the promoter sequences from the entire
 genome as a background to model the null distribution, let’s create an
 object in R with all of the 500bp upstream sequences from
-<code>seq</code> to use as a control</p>
+<code>seq</code> to use as a control.</p>
 <pre class="r"><code># create a DNAStringSet object from our FC_list we created above.
 background_fa &lt;- DNAStringSet(left_join(FC_list,seq, by=c(&quot;ID&quot; = &quot;ensembl_gene_id&quot;)) |&gt;
                                        drop_na(&quot;coding_gene_flank&quot;) |&gt; pull(coding_gene_flank))
@@ -721,10 +734,11 @@ names(background_fa) &lt;- left_join(FC_list,seq, by=c(&quot;ID&quot; = &quot;en
 <pre class="r"><code># Run Streme
 streme_msn24_EtOH_down &lt;- runStreme(msn24_EtOH_down_fa, 
         control= background_fa,
-        minw = 8, # default is 8
-        maxw= 15, #default is 15
+        minw = 8, # default is 8, for yeast I use 5
+        maxw= 15, #default is 15, for yeast i use 20
         parse_genomic_coord=FALSE,
-        silent=TRUE
+        silent=TRUE,
+        outdir = path.expand(paste0(out_dir, &quot;streme_msn24_EtOH_down&quot;))
         )
 
 # Display Streme results
@@ -790,15 +804,15 @@ streme_msn24_EtOH_down</code></pre>
 ## m8_MAGGGGCWGRANA         -20.4613    3.5e-21        -1              -1      108
 ## m9_CCTTTTTCCC            -14.4287    3.7e-15        -1              -1      286
 ##                    is_palindromic elapsed_time total_sites
-## m1_RCCCCTTACC                  no         11.1          76
-## m2_AAAGAAGCAGGAAGH             no         47.2           8
+## m1_RCCCCTTACC                  no         10.7          76
+## m2_AAAGAAGCAGGAAGH             no         45.5           8
 ## m3_AAGGGGAT                    no         33.1          24
-## m4_CAACAAGG                    no         87.8          14
-## m5_CCTTATATAD                  no         58.4          15
-## m6_AYAGGGGT                    no         78.4          19
+## m4_CAACAAGG                    no         86.7          14
+## m5_CCTTATATAD                  no         56.4          15
+## m6_AYAGGGGT                    no         76.9          19
 ## m7_AAGGGAGAAAB                 no         98.2          24
-## m8_MAGGGGCWGRANA               no         22.9          24
-## m9_CCTTTTTCCC                  no         68.8          28
+## m8_MAGGGGCWGRANA               no         22.7          24
+## m9_CCTTTTTCCC                  no         67.2          28
 ##                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    site_distr
 ## m1_RCCCCTTACC           0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 1 0 1 0 0 1 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 1 1 0 0 0 0 1 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 1 0 0 0 1 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 2 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 1 2 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 1 1 0 0 3 0 0 0 0 1 0 0 1 0 0 0 1 0 1 1 1 0 0 0 1 1 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 2 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 1 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1
 ## m2_AAAGAAGCAGGAAGH                0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
@@ -847,10 +861,7 @@ curl::curl_download(
   destfile = db_destination,
   quiet = FALSE,
   mode = &quot;wb&quot;
-)
-
-# Choose output directory for the output files to be saved
-out_dir &lt;- path.expand(&quot;~/Desktop/Genomic_Data_Analysis/Analysis/memes/&quot;)</code></pre>
+)</code></pre>
 <pre class="r"><code># Run TomTom on motifs found by runMeme()
 meme_tomtom_msn24_EtOH_down &lt;-
   runTomTom(
@@ -859,7 +870,7 @@ meme_tomtom_msn24_EtOH_down &lt;-
     thresh = 10,
     motif_pseudo = 0.1,
     database = db_destination,
-    outdir = path.expand(paste0(out_dir, &quot;meme_msn24_EtOH_down&quot;))
+    outdir = path.expand(paste0(out_dir, &quot;tomtom_meme_msn24_EtOH_down&quot;))
   )
 
 # View Meme TomTom results
@@ -878,7 +889,7 @@ streme_tomtom_msn24_EtOH_down &lt;-
     thresh = 10,
     motif_pseudo = 0.1,
     database = db_destination,
-    outdir = path.expand(paste0(out_dir, &quot;streme_msn24_EtOH_down&quot;))
+    outdir = path.expand(paste0(out_dir, &quot;tomtom_streme_msn24_EtOH_down&quot;))
   )
 
 # View Streme TomTom results
@@ -948,10 +959,11 @@ names(msn24_EtOH_up_fa) &lt;- msn24_EtOH_up$ID
 streme_msn24_EtOH_up &lt;- runStreme(msn24_EtOH_up_fa, 
         control= background_fa,
         # control= &quot;shuffle&quot;,
-        minw = 5, # default is 8
-        maxw= 15, #default is 15
+        minw = 5, # default is 8, for yeast I use 5
+        maxw= 20, #default is 15, for yeast I use 20
         parse_genomic_coord=FALSE,
-        silent=TRUE
+        silent=TRUE,
+  outdir = path.expand(paste0(out_dir, &quot;streme_msn24_EtOH_up&quot;))
         )
 
 # Run TomTom analysis
@@ -961,14 +973,14 @@ streme_tomtom_msn24_EtOH_up &lt;- runTomTom(
   thresh = 10,
   motif_pseudo = 0.1,
   database = db_destination,
-  outdir = path.expand(paste0(out_dir, &quot;streme_msn24_EtOH_up&quot;))
+  outdir = path.expand(paste0(out_dir, &quot;tomtom_streme_msn24_EtOH_up&quot;))
   )</code></pre>
 <p>Are Msn2/4 motifs enriched here? What biological meaning can we take
 away from this?</p>
 </div>
 </div>
 <div id="skn7-exposed-to-salt." class="section level1">
-<h1>Skn7∆ exposed to salt.</h1>
+<h1><em>skn7</em>∆ exposed to salt.</h1>
 <p>Now, let’s take a look another mutant from this study exposed to a
 different stressor.</p>
 <pre class="r"><code># create gene list
@@ -991,11 +1003,12 @@ names(skn7_NaCl_down_fa) &lt;- skn7_NaCl_down$ID
 streme_skn7_NaCl_down &lt;- runStreme(skn7_NaCl_down_fa, 
         control= background_fa,
         # control= &quot;shuffle&quot;,
-        minw = 5, # default is 8
-        maxw= 15, #default is 15
+        minw = 8, # default is 8, for yeast I use 5
+        maxw= 15, #default is 15, for yeast I use 20
         evalue=TRUE,
         parse_genomic_coord=FALSE,
-        silent=TRUE
+        silent=TRUE,
+        outdir = path.expand(paste0(out_dir, &quot;streme_skn7_NaCl_down&quot;))
         )</code></pre>
 <pre><code>## Warning: No hold-out set was created because the primary hold-out set</code></pre>
 <pre><code>##          would have had fewer than 5 sequences.</code></pre>
@@ -1007,7 +1020,7 @@ streme_tomtom_skn7_NaCl_down &lt;- runTomTom(
   thresh = 20,
   motif_pseudo = 0.1,
   database = db_destination,
-  outdir = path.expand(paste0(out_dir, &quot;streme_skn7_NaCl_down&quot;))
+  outdir = path.expand(paste0(out_dir, &quot;tomtom_streme_skn7_NaCl_down&quot;))
   )</code></pre>
 <p>Notice we have fewer genes this time, let’s try meme instead</p>
 <pre class="r"><code># Run Meme
@@ -1017,12 +1030,14 @@ meme_skn7_NaCl_down &lt;- runMeme(
   # objfun=&quot;de&quot;,
   parse_genomic_coord = FALSE,
   minw = 5,
-  maxw = 15,
+  maxw = 20,
   markov_order = 2,
+  mod= &quot;zoops&quot;, #zero or one occurence per sequence
   seed = 0,
   dna = T,
   revcomp = T,
-  evt = 0.1
+  evt = 0.1,
+  outdir = path.expand(paste0(out_dir, &quot;meme_skn7_NaCl_down&quot;))
 )
 
 # Run TomTom analysis
@@ -1033,8 +1048,21 @@ meme_tomtom_skn7_NaCl_down &lt;- runTomTom(
   motif_pseudo = 0.1,
   min_overlap = 5,
   database = db_destination,
-  outdir = path.expand(paste0(out_dir, &quot;meme_skn7_NaCl_down&quot;))
+  outdir = path.expand(paste0(out_dir, &quot;tomtom_meme_skn7_NaCl_down&quot;))
   )</code></pre>
+</div>
+<div id="questions" class="section level1">
+<h1>Questions</h1>
+<ol style="list-style-type: decimal">
+<li><p>What is the difference in motifs when you change the settings for
+analyzing the msn2/4 mutant vs wild-type ethanol response using “zoops”
+or “anr” as the setting?</p></li>
+<li><p>Perform MEME and STREME on the wild-type salt response and
+wild-type ethanol response (using a log2 FC of 3 and FDR &lt; 0.01) to
+identify motifs in genes that are strongly induced for each stress, and
+then follow that analysis with TOMTOM. What TFs may be shared and what
+TFs may be different between the two stress responses?</p></li>
+</ol>
 <p>Be sure to knit this file into a pdf or html file once you’re
 finished.</p>
 <p>System information for reproducibility:</p>
